fix horizontal scrollBar bug

--- a/src/app/components/AuthPage/AuthPage.module.sass
+++ b/src/app/components/AuthPage/AuthPage.module.sass
@@ -1,13 +1,8 @@
 .HomePage
-    width: 100vw
+    max-width: fit-content
     min-height: 90vh
 
     box-sizing: border-box
-    border-radius: 1rem
-    
-    font-size: 2rem
-    font-weight: 300
-    color: #54e31b
 
     display: flex
     flex-direction: column
