--- a/src/app/components/ConsoleContent/ConsoleContent.module.sass
+++ b/src/app/components/ConsoleContent/ConsoleContent.module.sass
@@ -1,5 +1,5 @@
 .ConsoleContent
-    width: 100vw
+    width: 100%
 
     display: flex
     flex-direction: column
