--- a/src/app/components/ConsoleInput/ConsoleInput.module.sass
+++ b/src/app/components/ConsoleInput/ConsoleInput.module.sass
@@ -1,5 +1,5 @@
 .ConsoleInput
-    width: 100%
+    max-width: 90%
 
     display: flex
     flex-direction: row
